--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "chart.js": "^4.4.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "typescript": "^4.4.2",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-table": "^7.7.17",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
