--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
